CURATE TESTS: SPARQL query builder is not offered. Page title of "Startup status" has changed. Name of VIVO Core Ontology has changed.

--- a/conversion/tests_in_html/AdminSecurity/NewAdminCheckPrivileges.html
+++ b/conversion/tests_in_html/AdminSecurity/NewAdminCheckPrivileges.html
@@ -207,11 +207,6 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=SPARQL query builder</td>
-	<td></td>
-</tr>
-<tr>
 	<td>verifyTextPresent</td>
 	<td>Site Maintenance</td>
 	<td></td>
@@ -524,7 +519,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>Startup Status</td>
+	<td>Startup status</td>
 	<td></td>
 </tr>
 <tr>
@@ -660,7 +655,7 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=VIVO Core</td>
+	<td>link=VIVO Core Ontology</td>
 	<td></td>
 </tr>
 <tr>
@@ -1238,56 +1233,6 @@
 	<td>verifyTextPresent</td>
 	<td>Format for CONSTRUCT and DESCRIBE query results:</td>
 	<td></td>
-</tr>
-<tr>
-	<td>verifyTextNotPresent</td>
-	<td>We're sorry, but you are not authorized to view the page you requested. If you think this is an error, please contact us and we'll be happy to help.</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Site Admin</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertTitle</td>
-	<td>VIVO Site Administration</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=SPARQL query builder</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertTitle</td>
-	<td>SPARQL Query Builder</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>SPARQL Query Builder</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Subject</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Predicate</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Object</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyValue</td>
-	<td>css=input.submit</td>
-	<td>Generate Query</td>
 </tr>
 <tr>
 	<td>verifyTextNotPresent</td>
