CURATE TESTS: Change copyright date. Delete managed pages by name, not by position.

--- a/conversion/tests_in_html/InitialSetup/RemoveMenuChanges.html
+++ b/conversion/tests_in_html/InitialSetup/RemoveMenuChanges.html
@@ -134,7 +134,7 @@
 <!--Delete new menu items one at a time, after going back to Page Management-->
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=(//img[@alt='delete this page'])[2]</td>
+	<td>css=a[pagetitle=" Activities"] img</td>
 	<td></td>
 </tr>
 <tr>
@@ -174,7 +174,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>xpath=(//img[@alt='delete this page'])[4]</td>
+	<td>css=a[pagetitle=" Courses"] img</td>
 	<td></td>
 </tr>
 <tr>
@@ -214,7 +214,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>xpath=(//img[@alt='delete this page'])[6]</td>
+	<td>css=a[pagetitle=" Equipment"] img</td>
 	<td></td>
 </tr>
 <tr>
@@ -254,7 +254,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>xpath=(//img[@alt='delete this page'])[7]</td>
+	<td>css=a[pagetitle=" Locations"] img</td>
 	<td></td>
 </tr>
 <tr>
@@ -294,7 +294,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>xpath=(//img[@alt='delete this page'])[10]</td>
+	<td>css=a[pagetitle=" Test HTML Page"] img</td>
 	<td></td>
 </tr>
 <tr>
