Curate the tests. This and that.

--- a/conversion/tests_in_html/AddPublications/ValidateFields.html
+++ b/conversion/tests_in_html/AddPublications/ValidateFields.html
@@ -453,7 +453,7 @@
 <tr>
 	<td>type</td>
 	<td>datafile</td>
-	<td>C:\VIVO\vivo\utilities\acceptance-tests\suites\AddPublications\<br />intendo-logo.jpg</td>
+	<td>C:\VIVO\vivo\utilities\acceptance-tests\suites\AddPublications\nintendo-logo.jpg</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
