--- a/conversion/tests_in_html/InitialSetup/EditSiteInfo.html
+++ b/conversion/tests_in_html/InitialSetup/EditSiteInfo.html
@@ -32,6 +32,7 @@
 	<td>VIVO</td>
 	<td></td>
 </tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
 <!--Check screen layout when not logged in-->
 <tr>
 	<td>verifyTextPresent</td>
@@ -118,11 +119,13 @@
 	<td>No academic departments found.</td>
 	<td></td>
 </tr>
+<!-- FORCE COMMENT Can't locate this after AJAX call -->
 <tr>
 	<td>verifyElementPresent</td>
 	<td>css=#home-stats &gt; h4</td>
 	<td></td>
 </tr>
+<!-- FORCE COMMENT Can't locate this after AJAX call -->
 <tr>
 	<td>verifyElementPresent</td>
 	<td>css=p.stats-count</td>
@@ -195,6 +198,7 @@
 	<td>loginForm</td>
 	<td></td>
 </tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
 <!--Check screen layout when logged in-->
 <tr>
 	<td>verifyTextPresent</td>
@@ -271,11 +275,13 @@
 	<td>No academic departments found.</td>
 	<td></td>
 </tr>
+<!-- FORCE COMMENT Can't locate this after AJAX call -->
 <tr>
 	<td>verifyElementPresent</td>
 	<td>css=#home-stats &gt; h4</td>
 	<td></td>
 </tr>
+<!-- FORCE COMMENT Can't locate this after AJAX call -->
 <tr>
 	<td>verifyElementPresent</td>
 	<td>css=p.stats-count</td>
