--- a/conversion/tests_in_html/InitialSetup/ValidateNewMenus.html
+++ b/conversion/tests_in_html/InitialSetup/ValidateNewMenus.html
@@ -700,6 +700,7 @@
 	<td>Activities</td>
 	<td></td>
 </tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
 <tr>
 	<td>verifyTextPresent</td>
 	<td>There is currently no Activities content in the system</td>
@@ -751,6 +752,7 @@
 	<td>Courses</td>
 	<td></td>
 </tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
 <tr>
 	<td>verifyTextPresent</td>
 	<td>There is currently no Courses content in the system</td>
@@ -802,6 +804,7 @@
 	<td>Equipment</td>
 	<td></td>
 </tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
 <tr>
 	<td>verifyTextPresent</td>
 	<td>There is currently no Equipment content in the system</td>
@@ -853,6 +856,7 @@
 	<td>Locations</td>
 	<td></td>
 </tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
 <tr>
 	<td>verifyTextPresent</td>
 	<td>Locations</td>
