--- a/conversion/tests_in_html/SearchExclusion/SearchFound.html
+++ b/conversion/tests_in_html/SearchExclusion/SearchFound.html
@@ -39,7 +39,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>faculty - VIVO Search Results</td>
+	<td>VIVO - Search results for 'faculty'</td>
 	<td></td>
 </tr>
 <tr>
