--- a/conversion/tests_in_html/SearchExclusion/SearchNotFound.html
+++ b/conversion/tests_in_html/SearchExclusion/SearchNotFound.html
@@ -39,12 +39,12 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>Search for 'faculty'</td>
+	<td>VIVO - Search results for 'faculty'</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Search for 'faculty'</td>
+	<td>Search results for 'faculty'</td>
 	<td></td>
 </tr>
 <tr>
