--- a/conversion/tests_in_html/SearchTextDiscovery/TextDiscovery.html
+++ b/conversion/tests_in_html/SearchTextDiscovery/TextDiscovery.html
@@ -137,7 +137,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>baker - VIVO Search Results</td>
+	<td>VIVO - Search results for 'baker'</td>
 	<td></td>
 </tr>
 <tr>
@@ -233,7 +233,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>seeker - VIVO Search Results</td>
+	<td>VIVO - Search results for 'seeker'</td>
 	<td></td>
 </tr>
 <tr>
@@ -324,7 +324,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>Honcho - VIVO Search Results</td>
+	<td>VIVO - Search results for 'Honcho'</td>
 	<td></td>
 </tr>
 <tr>
@@ -425,7 +425,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>abaker - VIVO Search Results</td>
+	<td>VIVO - Search results for 'abaker'</td>
 	<td></td>
 </tr>
 <tr>
@@ -546,7 +546,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>atlantis - VIVO Search Results</td>
+	<td>VIVO - Search results for 'atlantis'</td>
 	<td></td>
 </tr>
 <tr>
@@ -601,7 +601,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>baker - VIVO Search Results</td>
+	<td>VIVO - Search results for 'baker'</td>
 	<td></td>
 </tr>
 <tr>
@@ -737,7 +737,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>tinkering - VIVO Search Results</td>
+	<td>VIVO - Search results for 'tinkering'</td>
 	<td></td>
 </tr>
 <tr>
@@ -797,7 +797,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>baker - VIVO Search Results</td>
+	<td>VIVO - Search results for 'baker'</td>
 	<td></td>
 </tr>
 <tr>
@@ -837,7 +837,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[2]/span</td>
+	<td>//a[text()='Advanced Tinkering']/../span</td>
 	<td>Department</td>
 </tr>
 <tr>
@@ -847,7 +847,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[3]/span</td>
+	<td>//a[text()='Atlantis']/../span</td>
 	<td>Continent</td>
 </tr>
 <tr>
@@ -862,7 +862,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>burnisher - VIVO Search Results</td>
+	<td>VIVO - Search results for 'burnisher'</td>
 	<td></td>
 </tr>
 <tr>
@@ -902,12 +902,12 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[2]/span</td>
+	<td>//a[text()='Baker, Able ']/../span</td>
 	<td>Honcho</td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[2]/p/strong</td>
+	<td>//a[text()='Baker, Able ']/..//p/strong</td>
 	<td>Burnisher</td>
 </tr>
 <!--Object through standard context node-->
@@ -1018,7 +1018,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>thoughts - VIVO Search Results</td>
+	<td>VIVO - Search results for 'thoughts'</td>
 	<td></td>
 </tr>
 <tr>
@@ -1053,7 +1053,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[2]/span</td>
+	<td>//a[text()='Baker, Able ']/../span</td>
 	<td>Honcho</td>
 </tr>
 <tr>
@@ -1073,7 +1073,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>baker - VIVO Search Results</td>
+	<td>VIVO - Search results for 'baker'</td>
 	<td></td>
 </tr>
 <tr>
@@ -1192,11 +1192,13 @@
 	<td>name=Name</td>
 	<td>Lemuria</td>
 </tr>
+<!-- FORCE COMMENT need to wait for the response. -->
 <tr>
 	<td>clickAndWait</td>
 	<td>id=primaryAction</td>
 	<td></td>
 </tr>
+<!-- FORCE INSERT vivo_click_and_wait_for_indexing(:id, "primaryAction") -->
 <tr>
 	<td>assertTitle</td>
 	<td>Individual Control Panel</td>
@@ -1225,7 +1227,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>Search for 'Atlantis'</td>
+	<td>VIVO - Search results for 'Atlantis'</td>
 	<td></td>
 </tr>
 <tr>
@@ -1251,7 +1253,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>Lemuria - VIVO Search Results</td>
+	<td>VIVO - Search results for 'Lemuria'</td>
 	<td></td>
 </tr>
 <tr>
@@ -1307,7 +1309,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>baker - VIVO Search Results</td>
+	<td>VIVO - Search results for 'baker'</td>
 	<td></td>
 </tr>
 <tr>
@@ -1411,11 +1413,13 @@
 	<td>name=Name</td>
 	<td>Advanced Puttering</td>
 </tr>
+<!-- FORCE COMMENT need to wait for the response. -->
 <tr>
 	<td>clickAndWait</td>
 	<td>id=primaryAction</td>
 	<td></td>
 </tr>
+<!-- FORCE INSERT vivo_click_and_wait_for_indexing(:id, "primaryAction") -->
 <tr>
 	<td>assertTitle</td>
 	<td>Individual Control Panel</td>
@@ -1439,7 +1443,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>Search for 'tinkering'</td>
+	<td>VIVO - Search results for 'tinkering'</td>
 	<td></td>
 </tr>
 <tr>
@@ -1465,7 +1469,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>puttering - VIVO Search Results</td>
+	<td>VIVO - Search results for 'puttering'</td>
 	<td></td>
 </tr>
 <tr>
@@ -1516,7 +1520,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>baker - VIVO Search Results</td>
+	<td>VIVO - Search results for 'baker'</td>
 	<td></td>
 </tr>
 <tr>
@@ -1620,11 +1624,13 @@
 	<td>name=Name</td>
 	<td>Musings</td>
 </tr>
+<!-- FORCE COMMENT need to wait for the response. -->
 <tr>
 	<td>clickAndWait</td>
 	<td>id=primaryAction</td>
 	<td></td>
 </tr>
+<!-- FORCE INSERT vivo_click_and_wait_for_indexing(:id, "primaryAction") -->
 <tr>
 	<td>assertTitle</td>
 	<td>Individual Control Panel</td>
@@ -1648,7 +1654,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>Search for 'thoughts'</td>
+	<td>VIVO - Search results for 'thoughts'</td>
 	<td></td>
 </tr>
 <tr>
@@ -1674,7 +1680,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>musings - VIVO Search Results</td>
+	<td>VIVO - Search results for 'musings'</td>
 	<td></td>
 </tr>
 <tr>
@@ -1725,7 +1731,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>baker - VIVO Search Results</td>
+	<td>VIVO - Search results for 'baker'</td>
 	<td></td>
 </tr>
 <tr>
