More curation. InitialSetup works.

--- a/conversion/tests_in_html/AddRoles/AddFacultyMemberRoles2.html
+++ b/conversion/tests_in_html/AddRoles/AddFacultyMemberRoles2.html
@@ -103,7 +103,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Create research activity entry for Faculty, Jane</td>
+	<td>Faculty, Jane : Add a new researcher role</td>
 	<td></td>
 </tr>
 <tr>
@@ -159,7 +159,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Create research activity entry for Faculty, Jane</td>
+	<td>Faculty, Jane : Add a new researcher role</td>
 	<td></td>
 </tr>
 <tr>
@@ -199,7 +199,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Create research activity entry for Faculty, Jane</td>
+	<td>Faculty, Jane : Add a new researcher role</td>
 	<td></td>
 </tr>
 <tr>
@@ -255,7 +255,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Create research activity entry for Faculty, Jane</td>
+	<td>Faculty, Jane : Add a new researcher role</td>
 	<td></td>
 </tr>
 <tr>
@@ -352,7 +352,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Create research activity entry for Faculty, Jane</td>
+	<td>Faculty, Jane : Add a new researcher role</td>
 	<td></td>
 </tr>
 <tr>
@@ -367,7 +367,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Create research activity entry for Faculty, Jane</td>
+	<td>Faculty, Jane : Add a new researcher role</td>
 	<td></td>
 </tr>
 <tr>
@@ -474,7 +474,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Create teaching activity entry for Faculty, Jane</td>
+	<td>Faculty, Jane : Add a new teaching role</td>
 	<td></td>
 </tr>
 <tr>
@@ -586,7 +586,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Create teaching activity entry for Faculty, Jane</td>
+	<td>Faculty, Jane : Add a new teaching role</td>
 	<td></td>
 </tr>
 <tr>
@@ -693,7 +693,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Create teaching activity entry for Faculty, Jane</td>
+	<td>Faculty, Jane : Add a new teaching role</td>
 	<td></td>
 </tr>
 <tr>
@@ -800,7 +800,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Create clinical activity entry for Faculty, Jane</td>
+	<td>Faculty, Jane : Add a new clinical activity</td>
 	<td></td>
 </tr>
 <tr>
@@ -815,7 +815,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Create clinical activity entry for Faculty, Jane</td>
+	<td>Faculty, Jane : Add a new clinical activity</td>
 	<td></td>
 </tr>
 <tr>
@@ -917,7 +917,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Create clinical activity entry for Faculty, Jane</td>
+	<td>Faculty, Jane : Add a new clinical activity</td>
 	<td></td>
 </tr>
 <tr>
@@ -932,7 +932,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Create clinical activity entry for Faculty, Jane</td>
+	<td>Faculty, Jane : Add a new clinical activity</td>
 	<td></td>
 </tr>
 <tr>
@@ -1027,11 +1027,7 @@
 	<td>//div[@id='wrapper-content']/ul/li[18]</td>
 	<td></td>
 </tr>
-<tr>
-	<td>pause</td>
-	<td>10000</td>
-	<td></td>
-</tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
 <tr>
 	<td>verifyElementPresent</td>
 	<td>link=Prototype New Ape Home</td>
@@ -1123,11 +1119,7 @@
 	<td>Research</td>
 	<td></td>
 </tr>
-<tr>
-	<td>pause</td>
-	<td>5000</td>
-	<td></td>
-</tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
 <tr>
 	<td>verifyElementPresent</td>
 	<td>link=Grant (5)</td>
@@ -1168,11 +1160,7 @@
 	<td>VIVO</td>
 	<td></td>
 </tr>
-<tr>
-	<td>pause</td>
-	<td>5000</td>
-	<td></td>
-</tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
 <tr>
 	<td>verifyElementPresent</td>
 	<td>link=Faculty, Jane</td>
@@ -1188,11 +1176,7 @@
 	<td>css=a[alt=&quot;view all faculty&quot;]</td>
 	<td></td>
 </tr>
-<tr>
-	<td>pause</td>
-	<td>5000</td>
-	<td></td>
-</tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
 <tr>
 	<td>assertTitle</td>
 	<td>People</td>
@@ -1218,11 +1202,7 @@
 	<td>link=Faculty Member (1)</td>
 	<td></td>
 </tr>
-<tr>
-	<td>pause</td>
-	<td>5000</td>
-	<td></td>
-</tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
 <tr>
 	<td>verifyElementPresent</td>
 	<td>link=Faculty, Jane</td>
@@ -1238,11 +1218,7 @@
 	<td>link=Librarian (1)</td>
 	<td></td>
 </tr>
-<tr>
-	<td>pause</td>
-	<td>5000</td>
-	<td></td>
-</tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
 <tr>
 	<td>verifyElementPresent</td>
 	<td>link=Librarian, Lily</td>
@@ -1258,11 +1234,7 @@
 	<td>link=Person (2)</td>
 	<td></td>
 </tr>
-<tr>
-	<td>pause</td>
-	<td>5000</td>
-	<td></td>
-</tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
 <tr>
 	<td>verifyElementPresent</td>
 	<td>link=Faculty, Jane</td>
