--- a/conversion/tests_in_html/AddRoles/AddLibrarianRoles1.html
+++ b/conversion/tests_in_html/AddRoles/AddLibrarianRoles1.html
@@ -149,7 +149,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Presentation Name</td>
+	<td>Title of Presentation</td>
 	<td></td>
 </tr>
 <tr>
@@ -210,7 +210,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Presentation Name</td>
+	<td>Title of Presentation</td>
 	<td></td>
 </tr>
 <tr>
@@ -266,7 +266,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Presentation Name</td>
+	<td>Title of Presentation</td>
 	<td></td>
 </tr>
 <tr>
@@ -383,7 +383,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Presentation Name</td>
+	<td>Title of Presentation</td>
 	<td></td>
 </tr>
 <tr>
@@ -473,6 +473,8 @@
 	<td>//div[@id='wrapper-content']/ul/li[18]</td>
 	<td></td>
 </tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
+<!-- FORCE COMMENT Seems like "invited talk" isn't displayed. -->
 <tr>
 	<td>verifyTextPresent</td>
 	<td>invited talk</td>
@@ -590,11 +592,13 @@
 	<td>link=Index</td>
 	<td></td>
 </tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
 <tr>
 	<td>clickAndWait</td>
 	<td>link=Librarian</td>
 	<td></td>
 </tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
 <tr>
 	<td>assertTitle</td>
 	<td>Librarian</td>
@@ -636,6 +640,7 @@
 	<td>typeSelector</td>
 	<td>label=Museum</td>
 </tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
 <tr>
 	<td>verifyTextPresent</td>
 	<td>Organization Name</td>
@@ -702,6 +707,7 @@
 	<td>link=Librarian</td>
 	<td></td>
 </tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
 <tr>
 	<td>assertTitle</td>
 	<td>Librarian</td>
@@ -764,6 +770,7 @@
 	<td>typeSelector</td>
 	<td>label=Committee</td>
 </tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
 <tr>
 	<td>verifyTextPresent</td>
 	<td>Organization Name</td>
@@ -830,6 +837,7 @@
 	<td>link=Librarian</td>
 	<td></td>
 </tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
 <tr>
 	<td>assertTitle</td>
 	<td>Librarian</td>
@@ -871,6 +879,7 @@
 	<td>typeSelector</td>
 	<td>label=Association</td>
 </tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
 <tr>
 	<td>verifyTextPresent</td>
 	<td>Organization Name</td>
