--- a/conversion/tests_in_html/SelfEditing/AddSelfEditorId.html
+++ b/conversion/tests_in_html/SelfEditing/AddSelfEditorId.html
@@ -93,7 +93,7 @@
 <!--Add self-editor link field-->
 <tr>
 	<td>clickAndWait</td>
-	<td>css=a.add-researcherId &gt; img.add-individual</td>
+	<td>css=a.add-ARG_2000028 &gt; img.add-individual</td>
 	<td></td>
 </tr>
 <tr>
