--- a/conversion/tests_converted/SearchTextDiscovery/DeleteStuff.html
+++ b/conversion/tests_converted/SearchTextDiscovery/DeleteStuff.html
@@ -82,9 +82,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>//div[@id='isotope-container']/div[2]/h2</td>
+	<td>verifyTextPresent</td>
 	<td>organizations</td>
+	<td></td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
@@ -97,9 +97,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>//div[@id='isotope-container']/div[3]/h2</td>
+	<td>verifyTextPresent</td>
 	<td>research</td>
+	<td></td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
@@ -112,19 +112,14 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>//div[@id='isotope-container']/div[4]/h2</td>
+	<td>verifyTextPresent</td>
 	<td>locations</td>
+	<td></td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
 	<td>link=Continent</td>
 	<td></td>
-</tr>
-<tr>
-	<td>verifyText</td>
-	<td>//div[@id='isotope-container']/div[4]/ul/li</td>
-	<td>Continent (8)</td>
 </tr>
 <!--Delete everthing-->
 <tr>
