--- a/conversion/tests_converted/SearchTextDiscovery/TextDiscovery.html
+++ b/conversion/tests_converted/SearchTextDiscovery/TextDiscovery.html
@@ -1227,7 +1227,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>VIVO - Search results for 'Atlantis'</td>
+	<td>Search for 'Atlantis'</td>
 	<td></td>
 </tr>
 <tr>
@@ -1443,7 +1443,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>VIVO - Search results for 'tinkering'</td>
+	<td>Search for 'tinkering'</td>
 	<td></td>
 </tr>
 <tr>
@@ -1565,7 +1565,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[2]/span</td>
+	<td>//a[text()='Thoughts']/../span</td>
 	<td>Academic Article</td>
 </tr>
 <tr>
@@ -1575,7 +1575,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[3]/span</td>
+	<td>//a[text()='Advanced Puttering']/../span</td>
 	<td>Department</td>
 </tr>
 <tr>
@@ -1654,7 +1654,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>VIVO - Search results for 'thoughts'</td>
+	<td>Search for 'thoughts'</td>
 	<td></td>
 </tr>
 <tr>
