More curation, but no successes.

--- a/conversion/tests_in_html/CreatePeople/AddFacultyInfo.html
+++ b/conversion/tests_in_html/CreatePeople/AddFacultyInfo.html
@@ -472,11 +472,7 @@
 	<td></td>
 </tr>
 <!--Enter Affiliation tab fields-->
-<tr>
-	<td>click</td>
-	<td>css=li.nonSelectedGroupTab.clickable</td>
-	<td></td>
-</tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
 <tr>
 	<td>clickAndWait</td>
 	<td>//h3[@id='hasCollaborator']/a/img</td>
