--- a/conversion/tests_in_html/CreatePeople/CreateFacultyMember.html
+++ b/conversion/tests_in_html/CreatePeople/CreateFacultyMember.html
@@ -158,6 +158,7 @@
 	<td>link=Home</td>
 	<td></td>
 </tr>
+<!-- FORCE INSERT browser_wait_for_jQuery -->
 <tr>
 	<td>assertTitle</td>
 	<td>VIVO</td>
