--- a/conversion/tests_in_html/CreatePeople/CreateLibrarian.html
+++ b/conversion/tests_in_html/CreatePeople/CreateLibrarian.html
@@ -222,7 +222,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>librarian - VIVO Search Results</td>
+	<td>VIVO - Search results for 'librarian'</td>
 	<td></td>
 </tr>
 <tr>
@@ -246,6 +246,7 @@
 	<td>link=Home</td>
 	<td></td>
 </tr>
+<!-- FORCE INSERT vivo_wait_for_indexing -->
 <tr>
 	<td>assertTitle</td>
 	<td>VIVO</td>
