--- a/conversion/tests_in_html/CreatePeople/EditFacultyInfo.html
+++ b/conversion/tests_in_html/CreatePeople/EditFacultyInfo.html
@@ -243,7 +243,7 @@
 </tr>
 <tr>
 	<td>runScript</td>
-	<td>tinyMCE.activeEditor.setContent('I am named after Jane in the Tarzan stories.&nbsp;&nbsp;Yes, my last name really is faculty.')</td>
+	<td>tinyMCE.activeEditor.setContent('I am named after Jane in the Tarzan stories.&nbsp;Yes, my last name really is faculty.')</td>
 	<td></td>
 </tr>
 <tr>
@@ -725,11 +725,8 @@
 	<td>tinymce</td>
 	<td></td>
 </tr>
-<tr>
-	<td>runScript</td>
-	<td>tinyMCE.activeEditor.setContent('3333333')</td>
-	<td></td>
-</tr>
+<!-- FORCE INSERT $browser.find_element(:id, "literal").clear -->
+<!-- FORCE INSERT $browser.find_element(:id, "literal").send_keys("3333333") -->
 <tr>
 	<td>clickAndWait</td>
 	<td>id=submit</td>
@@ -755,11 +752,8 @@
 	<td>tinymce</td>
 	<td></td>
 </tr>
-<tr>
-	<td>runScript</td>
-	<td>tinyMCE.activeEditor.setContent('African Apes')</td>
-	<td></td>
-</tr>
+<!-- FORCE INSERT $browser.find_element(:id, "literal").clear -->
+<!-- FORCE INSERT $browser.find_element(:id, "literal").send_keys("African Apes") -->
 <tr>
 	<td>clickAndWait</td>
 	<td>submit</td>
