--- a/conversion/tests_in_html/CreatePeople/SearchFacultyInfo.html
+++ b/conversion/tests_in_html/CreatePeople/SearchFacultyInfo.html
@@ -42,7 +42,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>ape - VIVO Search Results</td>
+	<td>VIVO - Search results for 'ape'</td>
 	<td></td>
 </tr>
 <tr>
@@ -143,7 +143,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>primate - VIVO Search Results</td>
+	<td>VIVO - Search results for 'primate'</td>
 	<td></td>
 </tr>
 <tr>
@@ -289,7 +289,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>chimp - VIVO Search Results</td>
+	<td>VIVO - Search results for 'chimp'</td>
 	<td></td>
 </tr>
 <tr>
@@ -335,7 +335,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>tarzan - VIVO Search Results</td>
+	<td>VIVO - Search results for 'tarzan'</td>
 	<td></td>
 </tr>
 <tr>
@@ -366,7 +366,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>mozamia - VIVO Search Results</td>
+	<td>VIVO - Search results for 'mozamia'</td>
 	<td></td>
 </tr>
 <tr>
@@ -412,7 +412,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>human - VIVO Search Results</td>
+	<td>VIVO - Search results for 'human'</td>
 	<td></td>
 </tr>
 <tr>
