--- a/conversion/tests_in_html/CustomAdvisesForm/SearchAdvises.html
+++ b/conversion/tests_in_html/CustomAdvisesForm/SearchAdvises.html
@@ -40,7 +40,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>advises - VIVO Search Results</td>
+	<td>VIVO - Search results for 'advises'</td>
 	<td></td>
 </tr>
 <tr>
@@ -76,7 +76,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>primate - VIVO Search Results</td>
+	<td>VIVO - Search results for 'primate'</td>
 	<td></td>
 </tr>
 <tr>
