--- a/conversion/tests_in_html/CustomEducationForm/AddEducationBackground.html
+++ b/conversion/tests_in_html/CustomEducationForm/AddEducationBackground.html
@@ -225,36 +225,7 @@
 	<td>endField-year</td>
 	<td>1980</td>
 </tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>submit</td>
-	<td></td>
-</tr>
-<tr>
-	<td>refreshAndWait</td>
-	<td>10000</td>
-	<td></td>
-</tr>
-<tr>
-	<td>refreshAndWait</td>
-	<td>10000</td>
-	<td></td>
-</tr>
-<tr>
-	<td>refreshAndWait</td>
-	<td>10000</td>
-	<td></td>
-</tr>
-<tr>
-	<td>refreshAndWait</td>
-	<td>10000</td>
-	<td></td>
-</tr>
-<tr>
-	<td>refreshAndWait</td>
-	<td>10000</td>
-	<td></td>
-</tr>
+<!-- FORCE INSERT vivo_click_and_wait_for_indexing(:id, "submit") -->
 <!--Verify degree appears-->
 <tr>
 	<td>assertTitle</td>
