--- a/conversion/tests_in_html/CustomPositionsForm/SearchPositions.html
+++ b/conversion/tests_in_html/CustomPositionsForm/SearchPositions.html
@@ -40,7 +40,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>lecturer - VIVO Search Results</td>
+	<td>VIVO - Search results for 'lecturer'</td>
 	<td></td>
 </tr>
 <tr>
@@ -91,7 +91,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>professor - VIVO Search Results</td>
+	<td>VIVO - Search results for 'professor'</td>
 	<td></td>
 </tr>
 <tr>
@@ -152,7 +152,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>carroll - VIVO Search Results</td>
+	<td>VIVO - Search results for 'carroll'</td>
 	<td></td>
 </tr>
 <tr>
@@ -234,7 +234,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>university - VIVO Search Results</td>
+	<td>VIVO - Search results for 'university'</td>
 	<td></td>
 </tr>
 <tr>
