--- a/conversion/tests_in_html/CustomEducationForm/SearchEducationBackground.html
+++ b/conversion/tests_in_html/CustomEducationForm/SearchEducationBackground.html
@@ -44,7 +44,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>carroll - VIVO Search Results</td>
+	<td>VIVO - Search results for 'carroll'</td>
 	<td></td>
 </tr>
 <tr>
@@ -89,7 +89,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>wisconsin - VIVO Search Results</td>
+	<td>VIVO - Search results for 'wisconsin'</td>
 	<td></td>
 </tr>
 <tr>
