Curate Add Roles. Implement browser_accept_alert(). Other tweaks,.

--- a/conversion/tests_converted/AddRoles/AddLibrarianRoles1.html
+++ b/conversion/tests_converted/AddRoles/AddLibrarianRoles1.html
@@ -518,7 +518,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Create service to the profession entry for Librarian, Lily</td>
+	<td>Librarian, Lily : Add a new service provider role</td>
 	<td></td>
 </tr>
 <tr>
@@ -627,7 +627,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Create service to the profession entry for Librarian, Lily</td>
+	<td>Librarian, Lily : Add a new service provider role</td>
 	<td></td>
 </tr>
 <tr>
@@ -757,7 +757,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Create outreach &amp; community service entry for Librarian, Lily</td>
+	<td>Librarian, Lily : Add a new outreach provider role</td>
 	<td></td>
 </tr>
 <tr>
@@ -866,7 +866,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Create outreach &amp; community service entry for Librarian, Lily</td>
+	<td>Librarian, Lily : Add a new outreach provider role</td>
 	<td></td>
 </tr>
 <tr>
