--- a/conversion/tests_converted/AddRoles/AddLibrarianRoles2.html
+++ b/conversion/tests_converted/AddRoles/AddLibrarianRoles2.html
@@ -103,7 +103,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Create leadership entry for Librarian, Lily</td>
+	<td>Librarian, Lily : Add a new "head of" role</td>
 	<td></td>
 </tr>
 <tr>
@@ -210,7 +210,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Create membership entry for Librarian, Lily</td>
+	<td>Librarian, Lily : Add a new membership</td>
 	<td></td>
 </tr>
 <tr>
@@ -251,7 +251,7 @@
 <tr>
 	<td>type</td>
 	<td>id=activity</td>
-	<td>Amercian Library Association</td>
+	<td>American Library Association</td>
 </tr>
 <tr>
 	<td>type</td>
@@ -317,12 +317,12 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Amercian Library Association Member 1988 -</td>
+	<td>American Library Association Member 1988 -</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=Amercian Library Association</td>
+	<td>link=American Library Association</td>
 	<td></td>
 </tr>
 <!--Log out-->
