--- a/conversion/tests_converted/AddRoles/CheckPublicView.html
+++ b/conversion/tests_converted/AddRoles/CheckPublicView.html
@@ -269,12 +269,12 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Amercian Library Association Member 1988 -</td>
+	<td>American Library Association Member 1988 -</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=Amercian Library Association</td>
+	<td>link=American Library Association</td>
 	<td></td>
 </tr>
 <tr>
