--- a/conversion/tests_converted/AddRoles/CheckRepairMode.html
+++ b/conversion/tests_converted/AddRoles/CheckRepairMode.html
@@ -331,7 +331,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Edit membership entry for Librarian, Lily</td>
+	<td>Librarian, Lily : Edit this membership</td>
 	<td></td>
 </tr>
 <tr>
@@ -368,7 +368,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Edit membership entry for Librarian, Lily</td>
+	<td>Librarian, Lily : Edit this membership</td>
 	<td></td>
 </tr>
 <tr>
