--- a/conversion/tests_converted/AddRoles/DeleteIndexStuff.html
+++ b/conversion/tests_converted/AddRoles/DeleteIndexStuff.html
@@ -882,12 +882,12 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Amercian Library Association</td>
+	<td>link=American Library Association</td>
 	<td></td>
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>Amercian Library Association</td>
+	<td>American Library Association</td>
 	<td></td>
 </tr>
 <tr>
