--- a/conversion/tests_converted/AddRoles/VerifyAllRolesSearchable.html
+++ b/conversion/tests_converted/AddRoles/VerifyAllRolesSearchable.html
@@ -41,7 +41,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>VIVO - VIVO Search Results</td>
+	<td>VIVO - Search results for 'VIVO'</td>
 	<td></td>
 </tr>
 <tr>
@@ -132,7 +132,7 @@
 </tr>
 <tr>
 	<td>assertTitle</td>
-	<td>ape - VIVO Search Results</td>
+	<td>VIVO - Search results for 'ape'</td>
 	<td></td>
 </tr>
 <tr>
@@ -292,19 +292,14 @@
 	<td></td>
 </tr>
 <tr>
-	<td>selectWindow</td>
-	<td>null</td>
+	<td>verifyTextPresent</td>
+	<td>Librarian, Lily Associate Librarian</td>
 	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[7]/span</td>
-	<td>Associate Librarian</td>
-</tr>
-<tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[8]/span</td>
-	<td>Assistant Professor</td>
+	<td>verifyTextPresent</td>
+	<td>Faculty, Jane Assistant Professor</td>
+	<td></td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
@@ -404,7 +399,7 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=Amercian Library Association</td>
+	<td>link=American Library Association</td>
 	<td></td>
 </tr>
 <tr>
@@ -413,49 +408,49 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>css=span.display-title</td>
-	<td>Associate Librarian</td>
+	<td>verifyTextPresent</td>
+	<td>Librarian, Lily Associate Librarian</td>
+	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[2]/span</td>
-	<td>Committee</td>
+	<td>verifyTextPresent</td>
+	<td>Librarians for the Better Treatment of Primates Committee</td>
+	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[3]/span</td>
-	<td>Department</td>
+	<td>verifyTextPresent</td>
+	<td>Reference Division Department</td>
+	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[4]/span</td>
-	<td>Presentation</td>
+	<td>verifyTextPresent</td>
+	<td>Researching Primates Presentation</td>
+	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[5]/span</td>
-	<td>Association</td>
+	<td>verifyTextPresent</td>
+	<td>Show Me the Primates! Association</td>
+	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[6]/span</td>
-	<td>Museum</td>
+	<td>verifyTextPresent</td>
+	<td>Primates of the World Museum</td>
+	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[7]/span</td>
-	<td>College</td>
+	<td>verifyTextPresent</td>
+	<td>Carroll College College</td>
+	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[8]/span</td>
-	<td>Association</td>
+	<td>verifyTextPresent</td>
+	<td>American Library Association Association</td>
+	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[9]/span</td>
-	<td>Invited Talk</td>
+	<td>verifyTextPresent</td>
+	<td>Animal Librarianship Invited Talk</td>
+	<td></td>
 </tr>
 <!--Verify search results for ANIMAL-->
 <tr>
@@ -494,19 +489,14 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[2]/span</td>
-	<td>Conference</td>
-</tr>
-<tr>
-	<td>verifyElementPresent</td>
-	<td>link=USAIN Conference</td>
+	<td>verifyTextPresent</td>
+	<td>USAIN Conference Conference</td>
 	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[3]/span</td>
-	<td>Associate Librarian</td>
+	<td>verifyTextPresent</td>
+	<td>Librarian, Lily Associate Librarian</td>
+	<td></td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
@@ -555,9 +545,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[2]/span</td>
-	<td>Associate Librarian</td>
+	<td>verifyTextPresent</td>
+	<td>Librarian, Lily Associate Librarian</td>
+	<td></td>
 </tr>
 <!--Verify search results for LIBRARY-->
 <tr>
@@ -587,12 +577,12 @@
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=Amercian Library Association</td>
+	<td>link=American Library Association</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Amercian Library Association Association</td>
+	<td>American Library Association Association</td>
 	<td></td>
 </tr>
 <tr>
@@ -601,9 +591,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
-	<td>//div[@id='wrapper-content']/div/ul/li[2]/span</td>
-	<td>Associate Librarian</td>
+	<td>verifyTextPresent</td>
+	<td>Librarian, Lily Associate Librarian</td>
+	<td></td>
 </tr>
 <!--Verify search results for FACULTY-->
 <tr>
