--- a/conversion/tests_in_html/CreateProperties/AddPropertyGroupPlace.html
+++ b/conversion/tests_in_html/CreateProperties/AddPropertyGroupPlace.html
@@ -104,12 +104,12 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>PublicDescription</td>
+	<td>name=PublicDescription</td>
 	<td>Properties related to location (building or non-geographic)</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>DisplayRank</td>
+	<td>name=DisplayRank</td>
 	<td>5</td>
 </tr>
 <tr>
