--- a/conversion/tests_in_html/CreateProperties/ChangePlaceDisplayRank.html
+++ b/conversion/tests_in_html/CreateProperties/ChangePlaceDisplayRank.html
@@ -94,7 +94,7 @@
 <!--Change Display Rank for place from 5 to 2-->
 <tr>
 	<td>type</td>
-	<td>DisplayRank</td>
+	<td>name=DisplayRank</td>
 	<td>2</td>
 </tr>
 <tr>
