--- a/conversion/tests_in_html/MultiLabels/ManageLabels.html
+++ b/conversion/tests_in_html/MultiLabels/ManageLabels.html
@@ -60,11 +60,7 @@
 	<td></td>
 </tr>
 <!--Verify manage labels icon is on profile-->
-<tr>
-	<td>pause</td>
-	<td>5000</td>
-	<td></td>
-</tr>
+<!-- FORCE INSERT vivo_wait_for_indexing -->
 <tr>
 	<td>clickAndWait</td>
 	<td>link=Furter, Frank</td>
