--- a/conversion/tests_converted/AddRoles/AddFacultyMemberRoles3.html
+++ b/conversion/tests_converted/AddRoles/AddFacultyMemberRoles3.html
@@ -103,7 +103,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Create attended entry for Faculty, Jane</td>
+	<td>Faculty, Jane : Add a new participation</td>
 	<td></td>
 </tr>
 <tr>
@@ -134,7 +134,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Create attended entry for Faculty, Jane</td>
+	<td>Faculty, Jane : Add a new participation</td>
 	<td></td>
 </tr>
 <tr>
@@ -170,7 +170,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Create attended entry for Faculty, Jane</td>
+	<td>Faculty, Jane : Add a new participation</td>
 	<td></td>
 </tr>
 <tr>
