--- a/conversion/tests_converted/CreateProperties/AddDataPropArchDetails.html
+++ b/conversion/tests_converted/CreateProperties/AddDataPropArchDetails.html
@@ -110,7 +110,7 @@
 <tr>
 	<td>select</td>
 	<td>name=Namespace</td>
-	<td>label=VIVO Core</td>
+	<td>label=VIVO Core Ontology</td>
 </tr>
 <tr>
 	<td>select</td>
@@ -139,7 +139,7 @@
 </tr>
 <tr>
 	<td>select</td>
-	<td>RangeDatatypeURI</td>
+	<td>name=RangeDatatypeURI</td>
 	<td>label=string</td>
 </tr>
 <tr>
@@ -170,7 +170,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>VIVO Core</td>
+	<td>VIVO Core Ontology</td>
 	<td></td>
 </tr>
 <tr>
@@ -296,7 +296,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>VIVO Core</td>
+	<td>VIVO Core Ontology</td>
 	<td></td>
 </tr>
 <tr>
