--- a/conversion/tests_converted/CreateProperties/AddObjPropYearFounded.html
+++ b/conversion/tests_converted/CreateProperties/AddObjPropYearFounded.html
@@ -110,7 +110,7 @@
 <tr>
 	<td>select</td>
 	<td>name=Namespace</td>
-	<td>label=Bibontology</td>
+	<td>label=Bibliographic Ontology</td>
 </tr>
 <tr>
 	<td>type</td>
@@ -125,7 +125,7 @@
 <tr>
 	<td>select</td>
 	<td>name=NamespaceInverse</td>
-	<td>label=Bibontology</td>
+	<td>label=Bibliographic Ontology</td>
 </tr>
 <tr>
 	<td>type</td>
@@ -205,7 +205,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Bibontology</td>
+	<td>Bibliographic Ontology</td>
 	<td></td>
 </tr>
 <tr>
