--- a/conversion/tests_converted/CreateProperties/AddMuseumYearFounded.html
+++ b/conversion/tests_converted/CreateProperties/AddMuseumYearFounded.html
@@ -70,6 +70,7 @@
 	<td></td>
 </tr>
 <!--Navigate Johnson Art Museum via Index-->
+<!-- FORCE INSERT vivo_wait_for_indexing -->
 <tr>
 	<td>clickAndWait</td>
 	<td>link=Index</td>
