--- a/conversion/tests_in_html/SelfEditing/AddSelfEditorId2.html
+++ b/conversion/tests_in_html/SelfEditing/AddSelfEditorId2.html
@@ -60,6 +60,7 @@
 	<td></td>
 </tr>
 <!--Find Jane Faculty via Index-->
+<!-- FORCE INSERT vivo_wait_for_indexing -->
 <tr>
 	<td>clickAndWait</td>
 	<td>link=Index</td>
