--- a/rubytests/spec/curated_tests/SparqlUpdateApi/TestSparqlApi.html
+++ b/rubytests/spec/curated_tests/SparqlUpdateApi/TestSparqlApi.html
@@ -15,7 +15,7 @@ form a {
 
 <form action="api/sparqlUpdate" method="POST">
     <a href="individual?uri=http%3A%2F%2Ftest.domain%2Fns%23book1&format=rdfxml">Get RDF</a>
-	<input type="text" name="email" value="testAdmin@cornell.edu" /> 
+	<input type="text" name="email" value="testAdmin@mydomain.edu" /> 
 	<input type="text" name="password" value="Password" />
 	<br/>
 	<textarea name="update" rows="6" cols="70" wrap="soft">
@@ -33,7 +33,7 @@ INSERT DATA {
 
 <form action="api/sparqlUpdate" method="POST">
     <a href="individual?uri=http%3A%2F%2Ftest.domain%2Fns%23book1&format=rdfxml">Get RDF</a>
-	<input type="text" name="email" value="testAdmin@cornell.edu" /> 
+	<input type="text" name="email" value="testAdmin@mydomain.edu" /> 
 	<input type="text" name="password" value="Password" />
 	<br/>
 	<textarea name="update" rows="7" cols="70" wrap="soft">
@@ -50,7 +50,7 @@ DELETE DATA {
 </form>
 
 <form action="api/sparqlUpdate" method="GET">
-	<input type="text" name="email" value="testAdmin@cornell.edu" /> 
+	<input type="text" name="email" value="testAdmin@mydomain.edu" /> 
 	<input type="text" name="password" value="Password" />
 	<br/>
 	<textarea name="update" rows="4" cols="70" wrap="soft">
@@ -75,7 +75,7 @@ INSERT DATA {
 </form>
 
 <form action="api/sparqlUpdate" method="POST">
-	<input type="text" name="email" value="bogus@cornell.edu" /> 
+	<input type="text" name="email" value="bogus@mydomain.edu" /> 
 	<input type="text" name="password" value="Password" />
 	<br/> 
 	<textarea name="update" rows="4" cols="70" wrap="soft">
@@ -89,7 +89,7 @@ INSERT DATA {
 </form>
 
 <form action="api/sparqlUpdate" method="POST">
-	<input type="text" name="email" value="testAdmin@cornell.edu" /> 
+	<input type="text" name="email" value="testAdmin@mydomain.edu" /> 
 	<input type="text" name="password" value="BOGUS" />
 	<br/> 
 	<textarea name="update" rows="4" cols="70" wrap="soft">
@@ -103,7 +103,7 @@ INSERT DATA {
 </form>
 
 <form action="api/sparqlUpdate" method="POST">
-	<input type="text" name="email" value="joeUser@cornell.edu" /> 
+	<input type="text" name="email" value="joeUser@mydomain.edu" /> 
 	<input type="text" name="password" value="Password" />
 	<br/> 
 	<textarea name="update" rows="4" cols="70" wrap="soft">
@@ -117,13 +117,13 @@ INSERT DATA {
 </form>
 
 <form action="api/sparqlUpdate" method="POST">
-	<input type="text" name="email" value="testAdmin@cornell.edu" /> 
+	<input type="text" name="email" value="testAdmin@mydomain.edu" /> 
 	<input type="text" name="password" value="Password" />
 	<input type="submit" value="SPARQL is missing">
 </form>
 
 <form action="api/sparqlUpdate" method="POST">
-	<input type="text" name="email" value="testAdmin@cornell.edu" /> 
+	<input type="text" name="email" value="testAdmin@mydomain.edu" /> 
 	<input type="text" name="password" value="Password" />
 	<br/> 
 	<textarea name="update" rows="4" cols="70" wrap="soft">
@@ -137,7 +137,7 @@ INSERT DATA } {
 </form>
 
 <form action="api/sparqlUpdate" method="POST">
-	<input type="text" name="email" value="testAdmin@cornell.edu" /> 
+	<input type="text" name="email" value="testAdmin@mydomain.edu" /> 
 	<input type="text" name="password" value="Password" />
 	<br/>
 	<textarea name="update" rows="5" cols="70" wrap="soft">
